# lib_mysqludf_skeleton

./: .gitignore  API  AUTHORS  Makefile.am  README  README.md  _config.yml  configure.ac  index.html  installdb.sql  lib_mysqludf_skeleton.c  mysqludf.c  mysqludf.cc  mysqludf.h  uninstalldb.sql
_includes/: main.html
_layouts/: base.html  default.html
_site/: index.html
test/: Makefile.am
